--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 //        maven { url "https://oss.sonatype.org/content/groups/public"}
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:0.+'
         classpath 'com.github.townsfolk:gradle-release:1.2'
     }
 }
