--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ android:
     - build-tools-20.0.0
 
     # The SDK version used to compile your project
-    - android-19
+    - android-20
 
     # Additional components
     - extra-google-google_play_services
@@ -20,5 +20,5 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-19
-    - sys-img-x86-android-17
+    # - sys-img-armeabi-v7a-android-19
+    # - sys-img-x86-android-17
