--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 //        maven { url "https://oss.sonatype.org/content/groups/public"}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.+'
+        classpath 'com.android.tools.build:gradle:0.12.2'
     }
 }
 
