--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: android
-script:   ./gradlew clean testDebug assembleDebug
+script:   ./gradlew clean assembleDebugTest
 android:
   components:
     # Uncomment the lines below if you want to
