Travis push built artifact to Maven repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: android
 script:   ./gradlew clean assembleDebugTest
+
+after_success: ./scripts/build-artifacts
+
 android:
   components:
     # Uncomment the lines below if you want to
