--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: android
 script:   ./gradlew clean assembleDebugTest
 
-after_success: ./scripts/build-artifacts
+after_success: find . -type f # ./scripts/build-artifacts
 
 android:
   components:
