--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,10 +2,5 @@
     package="com.sharethrough.android.sdk">
 
     <application android:allowBackup="true"
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
->
-
-    </application>
-
+        android:label="@string/app_name"/>
 </manifest>
