show menu with Basic item leading to a blank screen

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 android {
     compileSdkVersion 18
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         applicationId "com.sharethrough.android.sdk"
