--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,34 @@
-apply plugin: 'com.android.library'
-apply plugin: 'maven'
-
-allprojects {
-    version = version
-}
-
 buildscript {
     repositories {
         mavenCentral()
-//        maven { url "https://oss.sonatype.org/content/groups/public"}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
     }
 }
 
+allprojects {
+    repositories {
+        mavenCentral()
+    }
+    version = version
+}
+
+apply plugin: 'com.android.library'
+apply plugin: 'robolectric'
+
 android {
-    compileSdkVersion 18
+    compileSdkVersion 19
     buildToolsVersion '19.1.0'
 
     defaultConfig {
-        applicationId "com.sharethrough.android.sdk"
+//        applicationId "com.sharethrough.android.sdk"
         minSdkVersion 8
         targetSdkVersion 14
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
     buildTypes {
         release {
@@ -32,6 +36,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        androidTest {
+            setRoot('src/test')
+        }
+//        main { java.srcDirs = ['src/main/java', 'src/test/java'] }
+    }
+
 }
 
 task uploadArchives(type: Copy) {
@@ -40,9 +52,58 @@ task uploadArchives(type: Copy) {
 
     into '../app/lib'
 }
-uploadArchives.dependsOn assembleDebug
+uploadArchives.dependsOn test
+
+
+robolectric {
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+}
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.0.0'
+    compile fileTree(dir: 'lib', include: ['*.jar'])
+//    compile 'com.android.support:appcompat-v7:20.0.0'
+
+    repositories {
+        mavenCentral()
+    }
+
+    // Espresso
+    androidTestCompile files('lib/espresso-1.1.jar')
+    androidTestCompile files('lib/testrunner-1.1.jar')
+    androidTestCompile files('lib/testrunner-runtime-1.1.jar')
+    androidTestCompile 'com.google.guava:guava:14.0.1'
+    androidTestCompile 'com.squareup.dagger:dagger:1.1.0'
+    androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
+    androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
+    androidTestCompile('junit:junit:4.11') {
+        exclude module: 'hamcrest-core'
+    }
+    androidTestCompile('org.robolectric:robolectric:2.3') {
+        exclude module: 'classworlds'
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-provider-api'
+    }
+    androidTestCompile 'com.squareup:fest-android:1.0.+'
+}
+
+apply plugin: 'idea'
+
+idea {
+    module {
+        testOutputDir = file('build/test-classes/debug')
+    }
 }
