--- a/build.gradle
+++ b/build.gradle
@@ -62,13 +62,18 @@ robolectric {
 
 dependencies {
     compile fileTree(dir: 'lib', include: ['*.jar'])
-//    compile 'com.android.support:appcompat-v7:20.0.0'
+    //    compile 'com.android.support:appcompat-v7:20.0.0'
+
+    compile 'org.codehaus.jackson:jackson-core-asl:1.1.0'
+    compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'
 
     repositories {
         mavenCentral()
     }
-
     // Espresso
+    androidTestCompile('junit:junit:4.11') {
+        exclude module: 'hamcrest-core'
+    }
     androidTestCompile files('lib/espresso-1.1.jar')
     androidTestCompile files('lib/testrunner-1.1.jar')
     androidTestCompile files('lib/testrunner-runtime-1.1.jar')
@@ -77,9 +82,6 @@ dependencies {
     androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
     androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
-    androidTestCompile('junit:junit:4.11') {
-        exclude module: 'hamcrest-core'
-    }
     androidTestCompile('org.robolectric:robolectric:2.3') {
         exclude module: 'classworlds'
         exclude module: 'commons-logging'
