--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: android
-script:   ./gradlew clean assembleDebugTest
+script:   ./gradlew clean assembleDebugTest testDebug
 
 after_success: ./scripts/build-artifacts
 
@@ -11,7 +11,7 @@ android:
     # - tools
 
     # The BuildTools version used by your project
-    - build-tools-19.10.0
+    - build-tools-19.1.0
 
     # The SDK version used to compile your project
     - android-19
