--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ android {
         }
     }
 
+    dexOptions {
+        jumboMode = true
+    }
+
     sourceSets {
         androidTest {
             setRoot('src/test')
@@ -75,7 +79,7 @@ dependencies {
     androidTestCompile files('lib/testrunner-1.1.jar')
     androidTestCompile files('lib/testrunner-runtime-1.1.jar')
     androidTestCompile 'com.google.guava:guava:14.0.1'
-    androidTestCompile 'com.squareup.dagger:dagger:1.1.0'
+//    androidTestCompile 'com.squareup.dagger:dagger:1.1.0'
     androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
     androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
