--- a/build.gradle
+++ b/build.gradle
@@ -107,7 +107,7 @@ dependencies {
         exclude module: 'wagon-provider-api'
     }
     androidTestCompile 'com.squareup:fest-android:1.0.+'
-    androidTestCompile "org.mockito:mockito-core:1.+"
+    androidTestCompile 'org.mockito:mockito-core:1.+'
 }
 
 apply plugin: 'idea'
