--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: android
-script:   ./gradlew clean assembleDebugTest testDebug
+script:   ./gradlew test
 
 after_success: ./scripts/build-artifacts
 
