--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sharethrough.android.sdk">
+          package="com.sharethrough.sdk">
 
-    <application android:allowBackup="true" android:hardwareAccelerated="true"/>
+    <application android:allowBackup="true" android:hardwareAccelerated="true">
+        <activity android:name=".YoutubeActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize|screenLayout|layoutDirection|uiMode"/>
+    </application>
 </manifest>
