--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sharethrough.sdk">
+          package="com.sharethrough.android.sdk">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <application android:allowBackup="true" android:hardwareAccelerated="true">
-        <activity android:name=".YoutubeActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize|screenLayout|layoutDirection|uiMode"/>
-    </application>
+    <application android:allowBackup="true" android:hardwareAccelerated="true"/>
 </manifest>
