--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ android {
     compileSdkVersion 19
     buildToolsVersion '19.1.0'
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     defaultConfig {
 //        applicationId "com.sharethrough.android.sdk"
         minSdkVersion 8
