Travis prints out all test reports on failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: android
 script:   ./gradlew test assembleDebug createEclipseZip
 
 after_success: ./scripts/build-artifacts
+after_failure: find build/test-report/debug -type f | xargs cat
 
 android:
   components:
