--- a/build.gradle
+++ b/build.gradle
@@ -72,13 +72,6 @@ task uploadArchives(type: Copy) {
 uploadArchives.dependsOn test
 uploadArchives.dependsOn assembleDebug
 
-// TODO:
-//android.buildTypes.all{ theBuildType ->
-//    task ("${theBuildType.name}createEclipseZip")<<{
-//        //use debuggable flag
-//        println theBuildType.debuggable
-//    }
-//}
 def eclipseZipFolder = 'build/tmp/EclipseZip'
 task createEclipseZip(type: Zip) {
     baseName = 'Sharethrough_Android_SDK'
@@ -87,8 +80,7 @@ task createEclipseZip(type: Zip) {
     includeEmptyDirs(true)
 }
 task createEclipseZipFolder << {
-    // TODO: replace debug with theBuildType
-    def source = 'build/intermediates/bundles/debug/'
+    def source = 'build/intermediates/bundles/release/'
     copy {
         from(source)
         include 'AndroidManifest.xml'
@@ -119,10 +111,8 @@ task createEclipseZipFolder << {
     }
 }
 createEclipseZip.dependsOn createEclipseZipFolder
-// TODO: test${theBuildType}
 createEclipseZipFolder.dependsOn test
-// TODO: assemble${theBuildType}
-createEclipseZip.dependsOn assembleDebug
+createEclipseZip.dependsOn assembleRelease
 assemble.dependsOn(createEclipseZip)
 
 task copyTestAssets(type: Copy) {
