generate custom docs and add to docs directory

--- a/build.gradle
+++ b/build.gradle
@@ -181,42 +181,20 @@ idea {
 }
 
 sourceSets {
-    main {
+    docs {
         java {
-            exclude 'com/sharethrough/sdk/beacons/**'
-            exclude 'com/sharethrough/sdk/dialogs/**'
-            exclude 'com/sharethrough/sdk/media/**'
-            exclude 'com/sharethrough/sdk/network/**'
+            srcDir "$projectDir"
+            include  'src/main/java/com/sharethrough/sdk/Sharethrough.java'
+            include  'src/main/java/com/sharethrough/sdk/SharethroughListAdapter.java'
+            include  'src/main/java/com/sharethrough/sdk/BasicAdView.java'
+            include  'src/main/java/com/sharethrough/sdk/IAdView.java'
         }
     }
 }
 
 task generateSDKDocs(type: Javadoc) {
-    title = "Sharethrough Android SDK"
+    title = "Sharethrough Android SDK Docs"
     description = "Generates Javadoc for SDK"
-    println("" + sourceSets)
-    source = sourceSets.main.allJava
-    exclude '**/BuildConfig.java'
-    exclude '**/R.java'
+    source = sourceSets.docs.allJava
+    destinationDir = file("$projectDir/docs")
 }
-
-task testTask {
-    println("" + sourceSets.main.allJava)
-}
-
-//android.libraryVariants.all { variant ->
-//
-//    task("generate${variant.name}Javadoc", type: Javadoc) {
-//        title = "Sharethrough Android SDK"
-//        description "Generates Javadoc for $variant.name."
-//        source = variant.javaCompile.source
-////        ext.androidJar =
-////                "${android.plugin.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
-////        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
-////        options.links("http://docs.oracle.com/javase/7/docs/api/");
-////        options.links("http://d.android.com/reference/");
-//        exclude '**/BuildConfig.java'
-//        exclude '**/R.java'
-//    }
-//
-//}
