--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,34 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
+    def versionPropsFile = file('version.properties')
+
+    if (versionPropsFile.canRead()) {
+        def Properties versionProps = new Properties()
+
+        versionProps.load(new FileInputStream(versionPropsFile))
+
+        def code = versionProps['VERSION_CODE'].toInteger() + 1
+
+        versionProps['VERSION_CODE']=code.toString()
+        versionProps.store(versionPropsFile.newWriter(), null)
+
+        defaultConfig {
+            versionCode code
+            versionName "1.0.1"
+            minSdkVersion 14
+            targetSdkVersion 18
+        }
+    }
+    else {
+        throw new GradleException("Could not read version.properties!")
+    }
+
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 14
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
     buildTypes {
