--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ android {
         }
     }
 
-    compileSdkVersion 19
+    compileSdkVersion 21
     buildToolsVersion '21.1.1'
 
     compileOptions {
@@ -74,6 +74,7 @@ android {
 
     dexOptions {
         javaMaxHeapSize "2g"
+        jumboMode true
     }
 
     buildTypes {
