changed version name to use short hash of git commits

--- a/build.gradle
+++ b/build.gradle
@@ -42,19 +42,30 @@ android {
 
     def versionPropsFile = file('version.properties')
 
+    def getVersionName = { ->
+        def stdout = new ByteArrayOutputStream()
+        exec {
+            commandLine 'git', 'rev-parse', '--short', 'HEAD'
+            standardOutput = stdout
+        }
+        return stdout.toString().trim()
+    }
+
     if (versionPropsFile.canRead()) {
         def Properties versionProps = new Properties()
 
         versionProps.load(new FileInputStream(versionPropsFile))
 
         def code = versionProps['VERSION_CODE'].toInteger() + 1
+        def version = getVersionName()
 
         versionProps['VERSION_CODE']=code.toString()
+        versionProps['VERSION_NAME']=version.toString()
         versionProps.store(versionPropsFile.newWriter(), null)
 
         defaultConfig {
             versionCode code
-            versionName "1.1.6"
+            versionName version
             minSdkVersion 14
             targetSdkVersion 18
         }
@@ -67,7 +78,7 @@ android {
         minSdkVersion 9
         targetSdkVersion 14
         versionCode 1
-        versionName "1.1.6"
+        versionName getVersionName()
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
         multiDexEnabled true
     }
