--- a/build.gradle
+++ b/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     }
 
     compile 'com.google.android.gms:play-services:6.+'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     // Espresso
     androidTestCompile('junit:junit:4.11') {
