--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
 }
 
+
 allprojects {
     repositories {
         mavenCentral()
@@ -180,8 +181,8 @@ dependencies {
     }
 
     compile 'com.google.android.gms:play-services:6.+'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-
+    //compile (name: 'STRPicasso', ext: 'jar')
+    compile files("lib/STRPicasso.jar")
     // Espresso
     androidTestCompile('junit:junit:4.11') {
         exclude module: 'hamcrest-core'
