--- a/version.properties
+++ b/version.properties
@@ -1,3 +1,3 @@
-#Tue Aug 04 11:01:17 PDT 2015
-VERSION_NAME=585351f
-VERSION_CODE=1770
+#Tue Sep 01 13:43:08 PDT 2015
+VERSION_NAME=v2.1.2
+VERSION_CODE=1778
