--- a/version.properties
+++ b/version.properties
@@ -1,3 +1,3 @@
-#Mon Nov 16 13:11:17 PST 2015
-VERSION_NAME=v3.0.0
-VERSION_CODE=2319
+#Wed Nov 25 19:50:25 EST 2015
+VERSION_NAME=v3.0.1
+VERSION_CODE=2320
