Removed Forked version of Picasso
*we can reduce the size of our sdk by deferring the download of picasso during apk(from publishers) compilation.

--- a/build.gradle
+++ b/build.gradle
@@ -174,7 +174,7 @@ dependencies {
     }
 
     compile 'com.google.android.gms:play-services:6.+'
-    compile files("lib/STRPicasso.jar")
+    compile 'com.squareup.picasso:picasso:2.5.2'
     // Espresso
     androidTestCompile('junit:junit:4.11') {
         exclude module: 'hamcrest-core'
