--- a/version.properties
+++ b/version.properties
@@ -1,3 +1,3 @@
-#Wed Nov 25 19:50:25 EST 2015
-VERSION_NAME=v3.0.1
-VERSION_CODE=2320
+#Tue Dec 08 13:29:42 PST 2015
+VERSION_NAME=v3.0.2
+VERSION_CODE=2326
