--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 12
         targetSdkVersion 14
         versionCode 1
         versionName version
@@ -175,6 +175,8 @@ dependencies {
 
     compile 'com.google.android.gms:play-services:6.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.code.gson:gson:2.5'
+
     // Espresso
     androidTestCompile('junit:junit:4.11') {
         exclude module: 'hamcrest-core'
