--- a/build.gradle
+++ b/build.gradle
@@ -172,11 +172,10 @@ dependencies {
     repositories {
         mavenCentral()
     }
-
     compile 'com.google.android.gms:play-services:6.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.5'
-
+    compile 'com.android.volley:volley:1.0.0'
     // Espresso
     androidTestCompile('junit:junit:4.11') {
         exclude module: 'hamcrest-core'
