Volley is now hosted in jcenter so adding jcenter as dependency repo

--- a/build.gradle
+++ b/build.gradle
@@ -171,6 +171,7 @@ robolectric {
 dependencies {
     repositories {
         mavenCentral()
+        jcenter()
     }
     compile 'com.google.android.gms:play-services:6.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
