--- a/version.properties
+++ b/version.properties
@@ -1,3 +1,3 @@
-#Thu Jun 30 16:54:55 PDT 2016
-VERSION_NAME=v3.2.9
-VERSION_CODE=2617
+#Wed Jul 13 10:06:37 CDT 2016
+VERSION_NAME=v3.3.0
+VERSION_CODE=2623
