--- a/build.gradle
+++ b/build.gradle
@@ -178,6 +178,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
+//    compile project(':facebook')
 
     // Espresso
     androidTestCompile('junit:junit:4.11') {
