--- a/build.gradle
+++ b/build.gradle
@@ -172,13 +172,17 @@ dependencies {
     repositories {
         mavenCentral()
         jcenter()
+        flatDir {
+            dirs 'lib'
+        }
     }
     compile 'com.google.android.gms:play-services:6.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
-//    compile project(':facebook')
+    compile(name: 'AudienceNetwork', ext: 'aar')
+    //compile 'com.facebook.android:audience-network-sdk:4.13.0'
+    //compile project(':facebook')
 
     // Espresso
     androidTestCompile('junit:junit:4.11') {
