--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ script:   ./gradlew test assembleRelease createEclipseZip
 
 notifications:
   email: false
+  slack: 'sharethrough:YZcKbSI2iLvHfKh0heW8GM6G#eng-client-undergrnd'
 
 after_success: ./scripts/build-artifacts
 after_failure: find build/test-report/debug -type f | xargs cat
