--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,16 @@
 language: android
-script:   ./gradlew test assembleRelease createEclipseZip
-
+script: "./gradlew test assembleRelease createEclipseZip"
 notifications:
   email: false
-
-after_success: ./scripts/build-artifacts
+  slack:
+    rooms:
+      secure: FmwlMa/1p/XSm3ksvWTtj51pr38B9xxwfAy99q5wP2JDc8So3ksqB9eNGdd2XwQGYJAfpaca3NlvahgKDST9e+qXcBnZhwO3N8uKqyk4rKvoEX8lx/MN48ynOjdcbIDL4U7qkgFcHFWTq86+u4LooK/i3U+tPQ431AqWoucHL8M=
+after_success: "./scripts/build-artifacts"
 after_failure: find build/test-report/debug -type f | xargs cat
-
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-
-    # The BuildTools version used by your project
-    - build-tools-21.1.1
-
-    # The SDK version used to compile your project
-    - android-19
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    # - addon-google_apis-google-19
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    # - sys-img-armeabi-v7a-android-19
-    # - sys-img-x86-android-17
+  - build-tools-21.1.1
+  - android-19
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
