--- a/build.gradle
+++ b/build.gradle
@@ -182,9 +182,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.android.volley:volley:1.0.0'
-    compile(name: 'AudienceNetwork', ext: 'aar')
-    //compile 'com.facebook.android:audience-network-sdk:4.13.0'
-    //compile project(':facebook')
+    compile (group: 'com.facebook.android', name: 'audience-network-sdk', version: '4.16.0')
+            {exclude group: 'com.google.android.gms'}
 
     // Espresso
     androidTestCompile('junit:junit:4.11') {
