--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ android {
 
     compileSdkVersion 23
     buildToolsVersion '21.1.2'
+    useLibrary 'org.apache.http.legacy'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
